--- a/whw2025.md
+++ b/whw2025.md
@@ -907,4 +907,110 @@ receive() external payable {
 
 ### 
 
+### 2024.10.05
+
+第二十节发送ETH
+
+三种方法向其他合约发送ETH，他们是：transfer()，send()和call()，其中call()是被鼓励的用法。
+
+1、call没有gas限制，最为灵活，是最提倡的方法；
+1）call()没有gas限制，可以支持对方合约fallback()或receive()函数实现复杂逻辑。
+2）call()如果转账失败，不会revert。
+3）call()的返回值是(bool, bytes)，其中bool代表着转账成功或失败，需要额外代码处理一下。
+
+2、transfer有2300 gas限制，但是发送失败会自动revert交易，是次优选择；
+1）transfer()的gas限制是2300，足够用于转账，但对方合约的fallback()或receive()函数不能实现太复杂的逻辑。
+2）transfer()如果转账失败，会自动revert（回滚交易）
+3、send有2300 gas限制，而且发送失败不会自动revert交易，几乎没有人用它。
+1）send()的gas限制是2300，足够用于转账，但对方合约的fallback()或receive()函数不能实现太复杂的逻辑。
+2）send()如果转账失败，不会revert。
+3）send()的返回值是bool，代表着转账成功或失败，需要额外代码处理一下。
+
+
+
+第二十一节调用其他合约
+
+主要方式：
+
+1、通过合约地址直接调用： 使用合约的地址来直接调用目标合约的函数。这种方法最简单，只需知道目标合约的地址和函数签名即可。
+// 目标合约 A
+contract A {
+    uint public value;
+
+    function setValue(uint _value) public {
+        value = _value;
+    }
+}
+
+// 调用合约 B
+contract B {
+    function callSetValue(address contractA, uint _value) public {
+        // 直接使用合约地址和 ABI 编码进行调用
+        (bool success, ) = contractA.call(abi.encodeWithSignature("setValue(uint256)", _value));
+        require(success, "Call failed");
+    }
+}
+
+注意事项：
+
+1）使用 call 时，安全性较低，容易导致错误，所以务必进行错误检查（如 require(success)）。
+2）call 不会进行返回值类型检查，因此如果目标合约返回值的类型与预期不同，可能会导致数据处理错误。
+
+2、通过合约接口调用： 定义目标合约的接口并使用接口进行调用。这种方法更安全并且便于代码的可读性和可维护性。你可以定义一个目标合约的接口来调用它的函数。
+
+// 目标合约 A
+contract A {
+    uint public value;
+
+    function setValue(uint _value) public {
+        value = _value;
+    }
+
+    function getValue() public view returns (uint) {
+        return value;
+    }
+}
+
+// 定义接口 IContractA
+interface IContractA {
+    function setValue(uint _value) external;
+    function getValue() external view returns (uint);
+}
+
+// 调用合约 B
+contract B {
+    function callSetValue(address contractA, uint _value) public {
+        // 使用接口进行调用
+        IContractA(contractA).setValue(_value);
+    }
+
+    function callGetValue(address contractA) public view returns (uint) {
+        return IContractA(contractA).getValue();
+    }
+}
+
+注意事项：
+1）接口定义的函数不能包含函数体，只能声明。
+2）调用外部合约的函数时，接口更安全、可维护性更高，但前提是需要清楚目标合约的函数签名。
+
+3、继承和合约的内部调用： 通过继承合约，直接调用继承的合约中的函数。如果一个合约继承了另一个合约，那么可以直接在子合约中调用父合约的函数，
+
+// 父合约 A
+contract A {
+    uint public value;
+
+    function setValue(uint _value) public {
+        value = _value;
+    }
+}
+
+// 子合约 B 继承 A
+contract B is A {
+    function callSetValue(uint _value) public {
+        setValue(_value);  // 直接调用父合约的函数
+    }
+}
+
+###
+
 <!-- Content_END -->
