--- a/whw2025.md
+++ b/whw2025.md
@@ -1013,4 +1013,50 @@ contract B is A {
 
 ###
 
+### 2024.10.06
+
+第二十二节call
+
+call 是 address 类型的一个低级成员函数，用于与其他合约交互。
+call 是推荐的用来发送以太币（ETH）的方式，尤其是当合约没有明确的函数签名时（例如 fallback 或 receive 函数）。
+不推荐用 call 调用另一个合约的具体函数，这是因为使用 call 的时候并不会进行返回值类型检查或函数签名检查，这使得代码更容易出现安全漏洞。
+call 是一种低级调用，意味着调用者需要承担更大的风险，因为你把主动权交给了目标合约。
+当我们不知道目标合约的源代码或 ABI（应用二进制接口）时，不能生成合约的类型变量，这种情况下可以使用 call 函数来进行与目标合约的交互。
+
+低级成员函数”（low-level function）指的是在 Solidity 中那些与智能合约或外部账户交互时不依赖于具体合约的函数接口的函数。这些函数不像接口调用那样有编译期的类型检查和函数签名匹配，因此它们被称为“低级”。
+
+字节码（Bytecode）是在区块链智能合约部署和执行时实际运行的机器可读代码。简单来说，智能合约的源代码（Solidity 写的合约）在编译后会生成字节码，而这个字节码是以太坊虚拟机（EVM）能识别和执行的。
+
+
+第二十三节delegatecall
+
+1、delegatecall与call的不同与相同：
+1）当用户A通过合约B来call合约C的时候，执行的是合约C的函数，上下文(Context，可以理解为包含变量和状态的环境)也是合约C的；
+而当用户A通过合约B来delegatecall合约C的时候，执行的是合约C的函数，但是上下文仍是合约B的：msg.sender是A的地址，并且如果函数改变一些状态变量，产生的效果会作用于合约B的变量上。
+即：使用 delegatecall 时，调用目标合约的上下文保持为当前合约，也就是说，目标合约中的状态变量不会被修改，修改的是当前合约的状态变量。
+
+2）上下文不同：
+call：目标合约的状态变量和 msg.sender 都是基于目标合约的上下文。
+delegatecall：目标合约的代码在调用合约的上下文中执行，因此目标合约的状态变量不会改变，改变的是当前合约的状态变量，msg.sender 也保持不变。
+3）不能发送 ETH：delegatecall 只能用于函数调用，不能发送以太币（ETH）。也就是说，使用 delegatecall 时无法像 call 那样指定 value 参数来发送 ETH。
+4）可以指定 gas：delegatecall 和 call 一样，可以通过 {gas: gasAmount} 指定调用时使用的 gas 限制。
+5）和 call 一样，delegatecall 也使用 abi.encodeWithSignature 来生成二进制数据。此函数将函数的签名（函数名和参数类型）和传递的参数编码为二进制格式。
+
+2、函数签名为"函数名（逗号分隔的参数类型）"。例如abi.encodeWithSignature("f(uint256,address)", _x, _addr)
+
+3、安全隐患
+1）在使用 delegatecall 时要非常谨慎，因为它是在当前合约的上下文中执行目标合约的代码；
+2）状态变量相同：目标合约的代码将修改当前合约的状态变量，这意味着如果目标合约的代码设计不当，可能会意外修改当前合约的关键数据。
+3）确保合约安全：使用 delegatecall 时，必须确保目标合约是安全的，尤其在调用外部不受信任的合约时，否则可能导致合约的状态变量被恶意篡改，造成资金或数据损失。
+4、delegatecall 有两个主要的应用场景：
+1）代理合约 (Proxy Contract)
+代理合约是智能合约升级模式中的一个重要概念。其基本工作原理是将合约的存储部分与逻辑部分分离开来。代理合约负责保存所有相关的变量，而逻辑合约则保存所有函数。每当代理合约需要调用某个函数时，便通过 delegatecall 去执行逻辑合约的代码。
+• 存储分离：代理合约保存与合约相关的所有状态变量，而逻辑合约则不保存任何状态数据。
+• 升级灵活性：当需要升级智能合约时，只需要将代理合约的地址指向新的逻辑合约，而不需要迁移数据。这种方式极大地增强了合约的升级灵活性。
+
+2）EIP-2535 Diamonds 标准
+EIP-2535 钻石标准是一种模块化的智能合约系统，允许在生产或扩展过程中构建可升级的智能合约架构。钻石标准使得多个逻辑合约可以被代理合约调度，从而形成一个系统。每个逻辑合约只负责某一部分功能，代理合约通过 delegatecall 来调用相应的逻辑合约。
+
+###
+
 <!-- Content_END -->
