--- a/content/Haoder/md/226.md
+++ b/content/Haoder/md/226.md
@@ -1,17 +1,13 @@
-# WTF Solidity 極簡入門：20. 發送 eth
+# WTF Solidity 極簡入門：topic
 
 ## 重點內容
 
 > [!NOTE]
-> 說明 solidity 中發送 eth 的三種方式：`transfer`、`send`、`call`
+> 本篇主旨
 
 ## 隨筆
 
-### transfer
-
-### send
-
-### call
+### Bla Bla Bla
 
 ## 題目練習
 
