--- a/content/llt/101.md
+++ b/content/llt/101.md
@@ -63,6 +63,8 @@
 - 普通地址（address）: 存储一个 20 字节的值（以太坊地址的大小）。
 - payable address: 比普通地址多了 `transfer` 和 `send` 两个成员方法，用于接收转账。
 
+  注：payable 命名后代表这个变量地址是可以转账查余额功能
+
 4. 定长字节数组
    - 字节数组分为定长和不定长两种：
      - 定长字节数组: 属于值类型，数组长度在声明之后不能改变。根据字节数组的长度分为 `bytes1`, `bytes8`, `bytes32` 等类型。定长字节数组最多存储 32 bytes 数据，即`bytes32`。
