--- a/content/llt/103.md
+++ b/content/llt/103.md
@@ -5,7 +5,9 @@
 - 有一下三种类型：
   - storage: 表示变量存储在链上。（合约里的状态变量默认都是`storage`）
   - memory: 表示变量储存在内存上。（函数里的参数和临时变量一般用`memory`）
-  - calldata: 表示变量储存在内存上且不能修改
+  - calldata: 表示变量储存在内存上且不能修改（用于外部函数的只读输入参数，效率高于memory）
+  
+  注：相同类型变量赋值，栈变量名改变，指针堆是相同的。所以改变新变量，原变量同步改变
 
 ### 作用域
 
