--- a/whw2025.md
+++ b/whw2025.md
@@ -1108,4 +1108,44 @@ selfdestruct(_addr)；
 
 ###
 
+### 2024.10.09
+
+第二十七节ABI编码解码
+
+1、ABI (Application Binary Interface，应用二进制接口)是与以太坊智能合约交互的标准。
+
+2、ABI编码有4个函数：
+（1）abi.encode
+
+abi.encode 是 Solidity 中用于将多个参数按照 ABI 规则编码的函数。它能够将不同类型的数据（例如整数、地址、字符串和数组）编码为 32 字节对齐的字节数据。
+
+（2）abi.encodePacked
+1）紧凑编码：abi.encodePacked 与 abi.encode 类似，但它会进行紧凑编码，省略其中的填充字节。例如，uint8 类型不会像 uint256 那样占用 32 字节的空间，只占用 1 字节。
+2）节省空间：abi.encodePacked 更节省空间，适用于对编码结果有严格字节数要求的场景，例如计算哈希值时。
+3）适用场景：当不与其他合约交互，而是需要对数据进行哈希计算或在外部系统之间传递较小数据时，可以使用 abi.encodePacked。
+
+（3）abi.encodeWithSignature
+1）abi.encodeWithSignature 常用于与智能合约交互时的外部调用，特别是在合约之间调用函数或通过外部交易调用合约时。你可以将生成的编码数据作为交易的 data 字段发送到合约，合约会根据函数选择器解析并执行对应的函数；
+2）多合约交互：当一个合约需要调用另一个合约的函数时，使用 abi.encodeWithSignature 可以生成调用参数并发送。
+3）代理合约调用：代理合约可以通过 delegatecall 调用另一个合约的函数，通过 abi.encodeWithSignature 生成函数调用数据。
+4）abi.encodeWithSignature：它不仅编码了参数，还包括了函数签名（即函数的哈希值）。这对于智能合约函数调用非常有用，因为以太坊虚拟机（EVM）需要根据函数选择器（哈希的前 4 字节）来确定调用哪个函数。
+（4）abi.encodeWithSelector
+1）工作过程：
+a、函数选择器生成： 通过 bytes4(keccak256(...))，我们生成了函数的 4 字节选择器。
+b、参数编码： abi.encodeWithSelector 将函数选择器和后续的参数数据拼接在一起，并对参数进行 ABI 编码。
+c、最终编码结果： 函数选择器 + ABI 编码的参数构成了调用合约函数所需的数据。
+2）与 abi.encodeWithSignature 的区别：
+a、abi.encodeWithSignature：你传入的是函数的完整签名（如 "foo(uint256,address,string,uint256[2])"），系统会自动计算函数选择器。
+b、abi.encodeWithSelector：你需要自己手动提供函数选择器，通常是通过对函数签名进行 Keccak-256 哈希计算并截取前 4 个字节得到的。
+3）应用场景：
+c、代理合约（Proxy Contracts）：代理合约可能需要调用目标合约的函数，但它们只知道函数选择器，而不是完整的函数签名。
+d、低级调用：在一些情况下，比如合约之间的低级调用（call 或 delegatecall），直接使用函数选择器来调用函数可能更加高效。
+3、ABI解码有1个函数：abi.decode，用于解码abi.encode的数据。
+4、ABI的使用场景​
+（1）在合约开发中，ABI常配合call来实现对合约的底层调用。
+（2）ethers.js中常用ABI实现合约的导入和函数调用。
+（3）对不开源合约进行反编译后，某些函数无法查到函数签名，可通过ABI进行调用。
+
+###
+
 <!-- Content_END -->
