--- a/cxk228922.md
+++ b/cxk228922.md
@@ -481,4 +481,29 @@ function setXTransferETH(address otherContract, uint256 x) payable external {
     OtherContract(otherContract).setX{value: msg.value}(x);
 }
 ```
+
+### 2024.10.10
+#### delegatecall
+- low-level function
+- executes the code of another contract in the context of the calling contract.
+```solidity=
+contract LogicContract {
+    uint public number;
+
+    function setNumber(uint _num) public {
+        number = _num;
+    }
+}
+
+contract ProxyContract {
+    uint public number;
+
+    function setNumber(address _logicContract, uint _num) public {
+        (bool success, ) = _logicContract.delegatecall(
+            abi.encodeWithSignature("setNumber(uint256)", _num)
+        );
+        require(success, "delegatecall failed");
+    }
+}
+```
 <!-- Content_END -->
