--- a/whw2025.md
+++ b/whw2025.md
@@ -1208,4 +1208,40 @@ calldata就是告诉智能合约，我要调用哪个函数，以及参数是什
 
 ###
 
+### 2024.10.11
+
+第三十节Try Catch
+
+
+1、try-catch是现代编程语言几乎都有的处理异常的一种标准方式。
+
+2、在Solidity中，try-catch只能被用于external函数或创建合约时constructor（被视为external函数）的调用。
+
+3、try-catch 只能用于以下两种情况：
+（1）external 函数的调用：也就是外部合约的函数调用，external 函数是指只能通过外部调用的合约函数。
+（2）合约创建：当你在合约内部创建另一个新合约时，try-catch 也可以用于捕获合约创建过程中的成功或失败情况
+（3）如果调用成功，则会执行 try 块中的代码；如果调用失败，则会执行 catch 块中的代码。
+（4）catch 块中的代码在函数调用失败时执行，这里可以处理错误，比如记录失败原因或者采取其他操作。失败的情况通常包括合约调用时出现 revert 或 assert，即调用的函数因为条件不满足或者内部错误而失败。
+
+4、在 Solidity 中，this.f() 可以用来代替外部合约调用 externalContract.f()，即你可以在合约内调用当前合约的外部函数。
+
+5、注意：在 try-catch 中，你不能用 this.f() 在构造函数里调用函数，因为在合约的构造函数中，合约还没有完全创建好，不能对自身调用 this.f()。
+
+6、catch 块可以捕获几种不同类型的异常。有三种主要的异常情况：
+
+（1）Error(string memory reason)：捕获通过 revert() 或 require() 抛出的错误。
+1）revert()：通过 revert() 触发的异常可以通过 catch Error(string memory reason) 来捕获，通常用于处理函数调用中的错误。
+2）require()：require() 触发的异常也会返回一个字符串原因，类似于revert()，同样可以通过 catch Error(string memory reason) 来捕获。
+
+（2）Panic(uint errorCode)：捕获 assert() 失败时产生的错误，以及其他低级别错误，如溢出、除零错误、数组访问越界等。即：assert() 触发的错误是属于 Panic 异常，可以通过 catch Panic(uint errorCode) 来捕获，通常用于捕获断言失败、整数溢出等问题。
+（3）catch (bytes memory lowLevelData)：捕获所有其他没有明确定义类型的错误。这通常是由于没有提供明确错误信息的 revert() 调用，或者用户自定义的错误类型。
+
+7、当 revert() 触发异常时，它可以返回一个 bytes 类型的低级别数据。这通常会出现在 catch (bytes memory lowLevelData) 的 catch 块中，用于捕获那些没有附带详细错误信息的 revert() 调用。
+
+8、require() 和 assert() 的异常捕获不会直接返回 bytes 类型的低级数据。require() 通常返回一个 Error 结构，带有一个字符串信息；而 assert() 会返回一个 Panic 异常，带有一个错误代码。
+
+9、try-catch 结构允许捕获外部函数调用或合约创建过程中的异常。当 catch 块捕获到异常时，它不会导致整个合约或方法调用失败，反而是提供了一种机制来处理异常情况，从而避免合约调用失败。
+
+###
+
 <!-- Content_END -->
