--- a/whw2025.md
+++ b/whw2025.md
@@ -1242,6 +1242,95 @@ calldata就是告诉智能合约，我要调用哪个函数，以及参数是什
 
 9、try-catch 结构允许捕获外部函数调用或合约创建过程中的异常。当 catch 块捕获到异常时，它不会导致整个合约或方法调用失败，反而是提供了一种机制来处理异常情况，从而避免合约调用失败。
 
+### 2024.10.12
+
+第三十一节ERC20
+
+1、ERC20是以太坊上的代币标准，来自2015年11月V神参与的EIP20。它实现了代币转账的基本逻辑：
+（1）账户余额(balanceOf())
+（2）转账(transfer())
+（3）授权转账(transferFrom())
+（4）授权(approve())
+（5）代币总供给(totalSupply())
+（6）授权转账额度(allowance())
+（7）代币信息（可选）：名称(name())，代号(symbol())，小数位数(decimals())
+
+2、IERC20是ERC20代币标准的接口合约，规定了ERC20代币需要实现的函数和事件。
+3、函数分为内部和外部两个内容，一个重点是实现，另一个是对外接口，约定共同数据。所以需要ERC20.sol和IERC20.sol两个文件才能实现一个合约。
+4、IERC20定义了2个事件：Transfer事件和Approval事件，分别在转账和授权时被释放；
+event Transfer(address indexed from, address indexed to, uint256 value);
+event Approval(address indexed owner, address indexed spender, uint256 value);
+5、IERC20定义了6个函数，提供了转移代币的基本功能，并允许代币获得批准，以便其他链上第三方使用：
+（1）totalSupply()返回代币总供给
+function totalSupply() external view returns (uint256);
+
+（2）balanceOf()返回账户余额
+function balanceOf(address account) external view returns (uint256);
+
+（3）transfer()转账
+function transfer(address to, uint256 amount) external returns (bool);
+
+（4）allowance()返回授权额度
+function allowance(address owner, address spender) external view returns (uint256);
+
+（5）approve()授权
+function approve(address spender, uint256 amount) external returns (bool);
+
+（6）transferFrom()授权转账
+function transferFrom(
+    address from,
+    address to,
+    uint256 amount
+) external returns (bool);
+
+
+第三十二节代币水龙头
+
+后期自己尝试部署再学习
+
+
+第三十三节空投合约
+
+1、Airdrop空投合约逻辑非常简单：利用循环，一笔交易将ERC20代币发送给多个地址。
+
+2、合约中包含两个函数
+（1）getSum()函数：返回uint数组的和。
+
+Airdrop空投合约逻辑非常简单：利用循环，一笔交易将ERC20代币发送给多个地址。合约中包含两个函数
+
+（2）multiTransferToken()函数：发送ERC20代币空投，包含3个参数：
+1）_token：代币合约地址（address类型）
+2）_addresses：接收空投的用户地址数组（address[]类型）
+3）_amounts：空投数量数组，对应_addresses里每个地址的数量（uint[]类型）
+
+3、multiTransferToken()函数有两个检查：第一个require检查了_addresses和_amounts两个数组长度是否相等；第二个require检查了空投合约的授权额度大于要空投的代币数量总和。
+
+
+第三十四节ERC721
+
+1、EIP全称 Ethereum Improvement Proposals(以太坊改进建议), 是以太坊开发者社区提出的改进建议, 是一系列以编号排定的文件, 类似互联网上IETF的RFC。
+
+2、ERC全称 Ethereum Request For Comment (以太坊意见征求稿), 用以记录以太坊上应用级的各种开发标准和协议。如典型的Token标准(ERC20, ERC721)、名字注册(ERC26, ERC13), URI范式(ERC67), Library/Package格式(EIP82), 钱包格式(EIP75,EIP85)
+
+3、EIP包含ERC
+4、ERC165​
+通过ERC165标准，智能合约可以声明它支持的接口，供其他合约检查。简单的说，ERC165就是检查一个智能合约是不是支持了ERC721，ERC1155的接口。
+
+5、IERC721​
+IERC721是ERC721标准的接口合约，规定了ERC721要实现的基本函数。它利用tokenId来表示特定的非同质化代币，授权或转账都要明确tokenId；而ERC20只需要明确转账的数额即可。
+6、IERC721函数​
+（1）balanceOf：返回某地址的NFT持有量balance。
+（2）ownerOf：返回某tokenId的主人owner。
+（3）transferFrom：普通转账，参数为转出地址from，接收地址to和tokenId。
+（4）safeTransferFrom：安全转账（如果接收方是合约地址，会要求实现ERC721Receiver接口）。参数为转出地址from，接收地址to和tokenId。
+（5）approve：授权另一个地址使用你的NFT。参数为被授权地址approve和tokenId。
+（6）getApproved：查询tokenId被批准给了哪个地址。
+（7）setApprovalForAll：将自己持有的该系列NFT批量授权给某个地址operator。
+（8）isApprovedForAll：查询某地址的NFT是否批量授权给了另一个operator地址。
+（9）safeTransferFrom：安全转账的重载函数，参数里面包含了data。
+
+7、为了防止误转账，ERC721实现了safeTransferFrom()安全转账函数，目标合约必须实现了IERC721Receiver接口才能接收ERC721代币，不然会revert。IERC721Receiver接口只包含一个onERC721Received()函数。
+
 ###
 
 <!-- Content_END -->
