feat: update note

--- a/content/llt/115.md
+++ b/content/llt/115.md
@@ -35,7 +35,7 @@ abi.encodeWithSignature("函数签名", 逗号分隔的具体参数)
 
 `delegatecall`(delegate:委托/代表的意思)与`call`类似，`address`类型的低级成员函数。
 
-`delegatecall`语法和call 一样，和`call`不一样，delegatecall`在调用合约时可以指定交易发送的`gas`，但不能指定发送的`ETH`数额
+`delegatecall`语法和call 一样，和`call`不一样，`delegatecall`在调用合约时可以指定交易发送的`gas`，但不能指定发送的`ETH`数额
 
 > ***注意***：`delegatecall`有安全隐患，使用时要保证当前合约和目标合约的状态变量存储结构相同（变量名可以不同，变量类型、声明顺序必须相同），并且目标合约安全，不然会造成资产损失。
 
