--- a/whw2025.md
+++ b/whw2025.md
@@ -1544,4 +1544,150 @@ ERC1155主合约包含16个函数：
 
 ###
 
+### 2024.10.15
+
+第四十三节线性释放
+
+1、代币归属条款（token vesting），在归属期内逐步释放代币，减缓抛压，并防止团队和资本方过早躺平。
+
+2、线性释放指的是代币在归属期内匀速释放。
+
+3、合约TokenVesting锁仓并线性释放ERC20代币的逻辑：
+（1）项目方规定线性释放的起始时间、归属期和受益人。
+（2）项目方将锁仓的ERC20代币转账给TokenVesting合约。
+（3）受益人可以调用release函数，从合约中取出释放的代币。
+
+4、线性释放合约中共有1个事件。
+ERC20Released：提币事件，当受益人提取释放代币时释放。
+
+5、线性释放合约中共有4个状态变量。
+（1）beneficiary：受益人地址。
+（2）start：归属期起始时间戳。
+（3）duration：归属期，单位为秒。
+（4）erc20Released：代币地址->释放数量的映射，记录受益人已领取的代币数量。
+
+6、线性释放合约中共有3个函数。
+（1）构造函数：初始化受益人地址，归属期(秒), 起始时间戳。参数为受益人地址beneficiaryAddress和归属期durationSeconds。为了方便，起始时间戳用的部署时的区块链时间戳block.timestamp。
+（2）release()：提取代币函数，将已释放的代币转账给受益人。调用了vestedAmount()函数计算可提取的代币数量，释放ERC20Released事件，然后将代币transfer给受益人。参数为代币地址token。
+（3）vestedAmount()：根据线性释放公式，查询已经释放的代币数量。开发者可以通过修改这个函数，自定义释放方式。参数为代币地址token和查询的时间戳timestamp。
+
+
+第四十四节代币锁
+
+1、代币锁(Token Locker)是一种简单的时间锁合约，它可以把合约中的代币锁仓一段时间，受益人在锁仓期满后可以取走代币。代币锁一般是用来锁仓流动性提供者LP代币的。
+
+
+2、锁仓ERC20代币的合约TokenLocker的逻辑：
+（1）开发者在部署合约时规定锁仓的时间，受益人地址，以及代币合约。
+（2）开发者将代币转入TokenLocker合约。
+（3）在锁仓期满，受益人可以取走合约里的代币。
+
+
+3、TokenLocker合约中共有2个事件。
+（1）TokenLockStart：锁仓开始事件，在合约部署时释放，记录受益人地址，代币地址，锁仓起始时间，和结束时间。
+（2）Release：代币释放事件，在受益人取出代币时释放，记录记录受益人地址，代币地址，释放代币时间，和代币数量。
+
+
+4、TokenLocker合约中共有4个状态变量。
+（1）token：锁仓代币地址。
+（2）beneficiary：受益人地址。
+（3）locktime：锁仓时间(秒)。
+（4）startTime：锁仓起始时间戳(秒)。
+
+
+5、TokenLocker合约中共有2个函数。
+（1）构造函数：初始化代币合约，受益人地址，以及锁仓时间。
+（2）release()：在锁仓期满后，将代币释放给受益人。需要受益人主动调用release()函数提取代币。
+
+
+第四十五节时间锁
+
+
+1、时间锁在区块链是一段代码，他可以将智能合约的某些功能锁定一段时间。可以大大改善智能合约的安全性。
+
+2、时间锁Timelock合约的逻辑：
+
+（1）在创建Timelock合约时，项目方可以设定锁定期，并把合约的管理员设为自己。
+（2）时间锁主要有三个功能：
+
+1）创建交易，并加入到时间锁队列。
+2）在交易的锁定期满后，执行交易。
+3）后悔了，取消时间锁队列中的某些交易。
+
+（3）项目方一般会把时间锁合约设为重要合约的管理员，例如金库合约，再通过时间锁操作他们。
+（4）时间锁合约的管理员一般为项目的多签钱包，保证去中心化。
+
+3、Timelock合约中共有4个事件。
+（1）QueueTransaction：交易创建并进入时间锁队列的事件。
+（2）ExecuteTransaction：锁定期满后交易执行的事件。
+（3）CancelTransaction：交易取消事件。
+（4）NewAdmin：修改管理员地址的事件。
+
+4、Timelock合约中共有4个状态变量。
+（1）admin：管理员地址。
+（2）delay：锁定期。
+（3）GRACE_PERIOD：交易过期时间。如果交易到了执行的时间点，但在GRACE_PERIOD没有被执行，就会过期。
+（4）queuedTransactions：进入时间锁队列交易的标识符txHash到bool的映射，记录所有在时间锁队列中的交易
+
+5、Timelock合约中共有2个modifier修饰器。
+（1）onlyOwner()：被修饰的函数只能被管理员执行。
+（2）onlyTimelock()：被修饰的函数只能被时间锁合约执行。
+
+6、Timelock合约中共有7个函数。
+（1）构造函数：初始化交易锁定时间（秒）和管理员地址。
+（2）queueTransaction()：创建交易并添加到时间锁队列中。参数比较复杂，因为要描述一个完整的交易：
+1）target：目标合约地址
+2）value：发送ETH数额
+3）signature：调用的函数签名（function signature）
+4）data：交易的call data
+5）executeTime：交易执行的区块链时间戳。
+（3）调用这个函数时，要保证交易预计执行时间executeTime大于当前区块链时间戳+锁定时间delay。交易的唯一标识符为所有参数的哈希值，利用getTxHash()函数计算。进入队列的交易会更新在queuedTransactions变量中，并释放QueueTransaction事件。
+（4）executeTransaction()：执行交易。它的参数与queueTransaction()相同。要求被执行的交易在时间锁队列中，达到交易的执行时间，且没有过期。执行交易时用到了solidity的低级成员函数call，在第22讲中有介绍。
+（5）cancelTransaction()：取消交易。它的参数与queueTransaction()相同。它要求被取消的交易在队列中，会更新queuedTransactions并释放CancelTransaction事件。
+（6）changeAdmin()：修改管理员地址，只能被Timelock合约调用。
+（7）getBlockTimestamp()：获取当前区块链时间戳。
+（8）getTxHash()：返回交易的标识符，为很多交易参数的hash。
+
+
+第四十六节代理合约
+
+1、代理模式将合约数据和逻辑分开，分别保存在不同合约中。
+
+2、数据（状态变量）存储在代理合约中，而逻辑（函数）保存在另一个逻辑合约中。代理合约（Proxy）通过delegatecall，将函数调用全权委托给逻辑合约（Implementation）执行，再把最终的结果返回给调用者（Caller）。
+
+3、代理模式主要有两个好处：
+（1）可升级：当我们需要升级合约的逻辑时，只需要将代理合约指向新的逻辑合约。
+（2）省gas：如果多个合约复用一套逻辑，我们只需部署一个逻辑合约，然后再部署多个只保存数据的代理合约，指向逻辑合约。
+
+4、代理合约的三个部分：代理合约Proxy，逻辑合约Logic，和一个调用示例Caller。
+
+5、代理合约的逻辑：
+（1）首先部署逻辑合约Logic。
+（2）创建代理合约Proxy，状态变量implementation记录Logic合约地址。
+（3）Proxy合约利用回调函数fallback，将所有调用委托给Logic合约
+（4）最后部署调用示例Caller合约，调用Proxy合约
+
+6、Logic合约和Proxy合约的状态变量存储结构相同，不然delegatecall会产生意想不到的行为，有安全隐患。
+
+7、内联汇编操作码：
+（1）calldatacopy(t, f, s)：将calldata（输入数据）从位置f开始复制s字节到mem（内存）的位置t。
+（2）delegatecall(g, a, in, insize, out, outsize)：调用地址a的合约，输入为mem[in..(in+insize)) ，输出为mem[out..(out+outsize))， 提供gwei的以太坊gas。这个操作码在错误时返回0，在成功时返回1。
+（3）returndatacopy(t, f, s)：将returndata（输出数据）从位置f开始复制s字节到mem（内存）的位置t。
+（4）switch：基础版if/else，不同的情况case返回不同值。可以有一个默认的default情况。
+（5）return(p, s)：终止函数执行, 返回数据mem[p..(p+s))。
+（6）revert(p, s)：终止函数执行, 回滚状态，返回数据mem[p..(p+s))。
+
+8、逻辑合约Logic；包含2个变量，1个事件，1个函数：
+（1）implementation：占位变量，与Proxy合约保持一致，防止插槽冲突。
+（2）x：uint变量，被设置为99。
+（3）CallSuccess事件：在调用成功时释放。
+（4）increment()函数：会被Proxy合约调用，释放CallSuccess事件，并返回一个uint，它的selector为0xd09de08a
+
+9、调用者合约Caller；有1个变量，2个函数：
+（1）proxy：状态变量，记录代理合约地址。
+（2）构造函数：在部署合约时初始化proxy变量。
+（3）increase()：利用call来调用代理合约的increment()函数，并返回一个uint。
+
+###
+
 <!-- Content_END -->
