feat: update note

--- a/content/llt/116.md
+++ b/content/llt/116.md
@@ -1,1 +1,61 @@
 # 在合约中创建新合约
+
+智能合约同可以创建新的智能合约。去中心化交易所`uniswap`就是利用工厂合约（`PairFactory`）创建了无数个币对合约（`Pair`）。
+
+有两种方法可以在合约中创建新合约，`create`和`create2`
+
+### create
+
+#### 用法：
+
+```
+Contract x = new Contract{value: _value}(params)
+```
+
+`Contract`是要创建的合约名，`x`是合约对象（地址），如果构造函数是`payable`，可以创建时转入`_value`数量的`ETH`，`params`是新合约构造函数的参数
+
+# creat2
+
+`CREATE2` 操作码在智能合约部署在以太坊网络之前就能预测合约的地址.
+
+### CREATE如何计算地址
+
+新合约的地址都以相同的方式计算：创建者的地址(通常为部署的钱包地址或者合约地址)和`nonce`(该地址发送交易的总数,对于合约账户是创建的合约总数,每创建一个合约nonce+1)的哈希。
+
+```
+新地址 = hash(创建者地址, nonce)
+```
+
+创建者地址不会变，但`nonce`可能会随时间而改变，因此用`CREATE`创建的合约地址不好预测。
+
+### CREATE2如何计算地址
+
+用`CREATE2`创建的合约地址由4个部分决定：
+
+- `0xFF`：一个常数，避免和`CREATE`冲突
+- `CreatorAddress`: 调用 CREATE2 的当前合约（创建合约）地址。
+- `salt`（盐）：一个创建者指定的`bytes32`类型的值，它的主要目的是用来影响新创建的合约的地址。
+- `initcode`: 新合约的初始字节码（合约的Creation Code和构造函数的参数）。
+
+```
+新地址 = hash("0xFF",创建者地址, salt, initcode)
+```
+
+### 用法
+
+和`CREATE`类似，同样是`new`一个合约，并传入新合约构造函数所需的参数，只不过要多传一个`salt`参数：
+
+```
+Contract x = new Contract{salt: _salt, value: _value}(params)
+```
+
+`Contract`是要创建的合约名，`x`是合约对象（地址），`_salt`是指定的盐；如果构造函数是`payable`，可以创建时转入`_value`数量的`ETH`，`params`是新合约构造函数的参数。
+
+### type关键字 的用法：
+
+- //type(C).name(string):合約的名称
+- //type(C).creationCode(bytes memory):合約的创建字节码
+- //type(C).runtimeCode(bytes memory):合約的运行时字节码
+- //type(I).interfaceId(bytes4):包含给定接口的 EIP-165 接口标示符
+- //type(T).min(T):整型 T 的最小值
+- // type(T).max(T):整型 T 的最大值
